tests/compile-fail/integration_suite__integration__general__unknown_instr_signature.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: signature not known for opcode 6000
   ┌─ <input>:27:7
   │
27 │       ins_6000(0, 0, 0);  
   │       ^^^^^^^^ signature not known
   │
   = try adding this instruction's signature to your mapfiles


